[package]
name = "fractal"
version = "0.1.0"
authors = ["terrahop <terra@fastmail.com>"]

[dependencies]
log = "0.4.6"
rand = "0.6.1"
env_logger = "0.6.0"
piston = "0.39.0"
piston2d-graphics = "0.28.0"
pistoncore-glutin_window = "0.51.1"
piston2d-opengl_graphics = "0.57.0"
piston_window = "0.85.0"
scoped_threadpool= "0.1.9"

[[bin]]
name = "fractal"
